yangming/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.kongs.info
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
